# usbwatch-rs

./: .gitignore  Cargo.toml  INSTALL.md  LICENSE  README.md  build_windows.sh  bump-version.sh
.github/workflows/: ci.yml
src/: device_info.rs  lib.rs  logger.rs  main.rs
src/watcher/: linux.rs  macos.rs  mod.rs  windows.rs
tests/: integration_test.rs
