[package]
name = "usbwatch-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
regex = "1.11.1"
tokio = { version = "1.46.1", features = ["full"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
] }

[target.'cfg(target_os = "linux")'.dependencies]
# libudev = "0.3" # Optional - we'll use sysfs instead
