[package]
name = "usbwatch-rs"
version = "0.4.3"
edition = "2021"
rust-version = "1.75.0"
authors = ["NotKeira <rust-pkgs@accounts.keira.boo>"]
description = "A cross-platform USB device monitoring tool written in Rust"
documentation = "https://docs.rs/usbwatch-rs"
homepage = "https://github.com/NotKeira/usbwatch-rs"
repository = "https://github.com/NotKeira/usbwatch-rs"
license = "Apache-2.0"
readme = "README.md"
keywords = ["usb", "monitoring", "cross-platform", "devices", "hardware"]
categories = ["command-line-utilities", "hardware-support"]
include = ["src/**/*", "LICENSE", "README.md", "INSTALL.md", "Cargo.toml"]

[[bin]]
name = "usbwatch"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.41", features = ["derive"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
regex = "1.11.1"
tokio = { version = "1.46.1", features = ["full"] }
colored = "3.0.0"
atty = "0.2.14"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = [
    "Win32_Foundation",
    "Win32_System_Registry",
    "Win32_Devices_DeviceAndDriverInstallation",
    "Win32_System_WindowsProgramming",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_LibraryLoader",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
io-kit-sys = "0.4.1"
core-foundation = "0.10.1"

[target.'cfg(target_os = "linux")'.dependencies]
# libudev = "0.3" # Optional - we'll use sysfs instead
